App navigation OOP

--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Javascript Lab",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests/**/*.test.js"
+    "test": "mocha --compilers js:@babel/register --require @babel/polyfill tests/**/*.test.js"
   },
   "author": "Petrus Cyrino",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.1.5",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "@babel/register": "^7.0.0",
     "chai": "^4.2.0",
     "mocha": "^5.2.0"
   }
